# hdgp

./: .gitignore  README.md
source/FABRICS/: .gitattributes  .gitignore  .gitlab-ci_deactivate.yml  CHANGELOG.md  CODEOWNERS  Dockerfile  LICENSE  README.md  deps.txt  fabrics_sim_version_test.py  pyproject.toml  setup.py  urdfpy_patch.sh
source/FABRICS/docs/: api.rst  conf.py  index.rst
source/FABRICS/docs/img/gifs/: .gitattributes
source/FABRICS/examples/: kuka_allegro_pose_fabric_example.py
source/FABRICS/src/fabrics_sim/: __init__.py
source/FABRICS/src/fabrics_sim/energy/: energy.py  euclidean_energy.py
source/FABRICS/src/fabrics_sim/fabric_params/: kuka_allegro_pose_params.yaml  openarm_tesollo_pose_params.yaml
source/FABRICS/src/fabrics_sim/fabric_terms/: attractor.py  attractor_1d.py  body_repulsion.py  body_sphere_3d_repulsion.py  cspace_attractor.py  fabric_term.py  feedforward_network.py  feedforward_network_fourier.py  inertia.py  joint_limit_repulsion.py  joint_speed_limit_repulsion.py
source/FABRICS/src/fabrics_sim/fabrics/: fabric.py  kuka_allegro_pose_fabric.py  model_batch_builder.py  openarm_tesollo_pose_fabric.py  taskmap_container.py
source/FABRICS/src/fabrics_sim/integrator/: integrators.py
source/FABRICS/src/fabrics_sim/prod/: cuda_stream_utils.py  import_urdf.py  kinematics.py  observation_space.py  optimizer.py  tools.py
source/FABRICS/src/fabrics_sim/taskmaps/: feedforward_neural_taskmap.py  identity.py  linear_taskmap.py  lower_joint_limit.py  maps_base.py  pose.py  slice_taskmap.py  (+3 more)
source/FABRICS/tests/: __init__.py
(+1654 files in other folders)
