[tool.poetry]
name = "fabrics_sim"
version = "0.1.0"
description = ""
authors = ["kavanwyk <56610403+kavanwyk@users.noreply.github.com>"]
packages = [ 
{ include = "fabrics_sim", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
torch = ">=2.4.0"
warp-lang = ">=1.5.0,<1.8.2"
PyYAML = "^6.0.2"
urdfpy = "^0.0.22"
numpy = ">=1.23.5,<2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
